# SID

./: .gitignore  CMakeLists.txt  Makefile  README.md
contrib/: Makefile  Makefile.am_sav
contrib/HealPix3/: Makefile
contrib/HtmIndex/: Makefile
contrib/HtmIndex/include/: VarStr.hpp  VarVecDef.h
contrib/Spherematch/: Makefile
sql/: Makefile  difcirc.sql  difinstall.sql  difrect.sql  pp.sql  sid-demo.sql  sidinstall.sql
src/: Makefile  comp  difflist_ui.cpp  getHTMBary.cpp  getHTMBaryC.cpp  getHTMBaryDist.cpp  getHTMNeighb.cpp  getHTMNeighbC.cpp  getHTMid.cpp  getHTMidByName.cpp  getHTMsNeighb.cpp  htmCircleRegion.cpp  htmRectRegion.cpp  myHealPCone.cpp  myHealPRect.cpp  myHealPRect4v.cpp  pp.c  udf.cc  udf.cc_vec  udf.cc_vec2  udf_dif.hh  udf_pippo.cc  udf_utils.hh
test/: README.md  qrjoin_demo.sql
